WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311342
HTMLFastPathParser fails to detect nested <li> elements when outer <li> is parsed via parseSpecificElements
https://bugs.webkit.org/show_bug.cgi?id=311342
Summary
HTMLFastPathParser fails to detect nested <li> elements when outer <li> is pa...
Chris Dumez
Reported
2026-04-02 05:19:25 PDT
HTMLFastPathParser fails to detect nested <li> elements when outer <li> is parsed via parseSpecificElements
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-02 05:21:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61910
EWS
Comment 2
2026-04-02 19:40:06 PDT
Committed
310492@main
(2371382e387d): <
https://commits.webkit.org/310492@main
> Reviewed commits have been landed. Closing PR #61910 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-02 19:41:13 PDT
<
rdar://problem/173983892
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug